Simulations don't take animated gravity into account #76097

Closed
opened 2020-04-25 15:53:26 +02:00 by ChristopherAnderssarian · 9 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 20.3.1
CPU: Intel Core i7-5960X

Blender Version(s)
(listed are versions tested)

Working: 2.79 (sub 00), branch: master, commit date: 2018-03-22 14:10, hash: f4dc9f9d68b, type: Release, build date: 2018-03-22, 09:59 AM
Working: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f54494e, type: Release, build date: 2019-07-29, 09:44 AM
Working: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42e3, type: Release, build date: 2019-11-20, 16:33:00
Broken: 2.82 (sub 07), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd76f, type: Release, build date: 2020-02-13, 01:56:46
Broken: blender-2.83-a8441fc90086-windows64 (build bot)

Short description of error

Simulations don't take animated gravity into account

Exact steps for others to reproduce the error

  • Open and bake

  • No change in gravity for the simulation

2.82.blend

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 20.3.1 CPU: Intel Core i7-5960X **Blender Version(s)** *(listed are versions tested)* Working: `2.79 (sub 00), branch: master, commit date: 2018-03-22 14:10, hash: f4dc9f9d68b, type: Release, build date: 2018-03-22, 09:59 AM` Working: `2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f54494e, type: Release, build date: 2019-07-29, 09:44 AM` Working: `2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42e3, type: Release, build date: 2019-11-20, 16:33:00` Broken: ` 2.82 (sub 07), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd76f, type: Release, build date: 2020-02-13, 01:56:46` Broken: ` blender-2.83-a8441fc90086-windows64` (build bot) **Short description of error** Simulations don't take animated gravity into account **Exact steps for others to reproduce the error** - Open and bake - No change in gravity for the simulation [2.82.blend](https://archive.blender.org/developer/F8494429/2.82.blend)

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

bah, wrong bookmark

bah, wrong bookmark

Added subscribers: @sebbas, @mano-wii

Added subscribers: @sebbas, @mano-wii

I'm not sure if this is really a bug, but it would be interesting to be implemented.
Did this work in the blender versions before mantaflow?

@sebbas, what do you think, Bug or known limitation?

I'm not sure if this is really a bug, but it would be interesting to be implemented. Did this work in the blender versions before mantaflow? @sebbas, what do you think, Bug or known limitation?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I saw now that it worked in blender 2.79 to 2.81.
So it's like a regression.

I saw now that it worked in blender 2.79 to 2.81. So it's like a regression.

This issue was referenced by 31d3f034ab

This issue was referenced by 31d3f034ab8b7531eded7b0200d6ec77ba29b6a2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-04-30 18:09:24 +02:00

This issue should be fixed now (21485e94aa also contributed to this fix).

This issue should be fixed now (21485e94aa also contributed to this fix).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76097
No description provided.