Fix T76097: Simulations don't take animated gravity into account

Together with 21485e94aac1 this commit should fix the issue with animated gravity values.